Coveo: Fix sort and filter rendering on mobile (#381)

--- a/assets/css/v2/style.css
+++ b/assets/css/v2/style.css
@@ -1293,7 +1293,6 @@ main {
 /* Search results on content */
 atomic-search-interface#search-v2 {
   position: relative;
-  z-index: 1;
   /* biome-ignore lint: Coveo override */
   display: inline-block !important;
   width: 95vw;
